fixes spacing on comment popup

--- a/uiElements/style.css
+++ b/uiElements/style.css
@@ -31,11 +31,12 @@
   background-color: #FFF;
   border: 1px solid #D8D7D5;
   box-sizing: border-box;
+  font-size: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   padding: 6px;
   white-space: normal;
-  min-width: 253px;
+  min-width: 245px;
 }
 
 .capture-comment-popup-input, #capture-tag-box-input {
@@ -163,6 +164,8 @@
 .capture-comment-form {
   display: inline-block;
   font-family: "Open Sans", "Helvetica", "sans-serif";
+  box-sizing: border-box;
+  font-size: 0;
 }
 
 .cature-icon-svg {
